2003-09-23  Jakub Steiner <jimmac@ximian.com>

	* TODO: add new stuff

2003-09-23  Jakub Steiner <jimmac@ximian.com>

	* 16x16/mimetypes/gnome-mime-image-gif.png
	* 16x16/mimetypes/gnome-mime-image-tiff.png
	* 16x16/mimetypes/gnome-mime-image-wmf.png
	* 32x32/mimetypes/gnome-mime-image-gif.png
	* 32x32/mimetypes/gnome-mime-image-tiff.png
	* 32x32/mimetypes/gnome-mime-image-wmf.png: more MIME types
	* 32x32/Makefile.am
	* 16x16/Makefile.am: updated

2003-09-22  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/object/stock_add-bookmark.png
	* 16x16/stock/object/stock_bookmark.png
	* 16x16/stock/object/stock_delete-bookmark.png
	* 16x16/stock/object/stock_edit-bookmark.png
	* 24x24/stock/object/stock_add-bookmark.png
	* 24x24/stock/object/stock_bookmark.png
	* 24x24/stock/object/stock_delete-bookmark.png
	* 24x24/stock/object/stock_edit-bookmark.png
	* 16x16/stock/object/Makefile.am
	* 24x24/stock/object/Makefile.am: bookmark icons
	* TODO: update

2003-09-19  Jakub Steiner <jimmac@ximian.com>

	* 16x16/apps/blender.png
	* 24x24/apps/blender.png
	* 32x32/apps/blender.png
	* 48x48/apps/blender.png: realised I need a desktop icon for
	  blender ;) Although I spend considerable time clicking myself
	  away to anti-alias it still seems imperfect at 32x32 and 48x48.
 	* 16x16/apps/generic/Makefile.am
	* 24x24/apps/generic/Makefile.am
	* 32x32/apps/generic/Makefile.am
	* 48x48/apps/generic/Makefile.am: added

2003-09-19  Jakub Steiner <jimmac@ximian.com>

	* 16x16/mimetypes/gnome-mime-image-bmp.png
	* 16x16/mimetypes/gnome-mime-image-svg.png
	* 32x32/mimetypes/gnome-mime-image-bmp.png
	* 32x32/mimetypes/gnome-mime-image-svg.png: more image types
	* 32x32/Makefile.am
	* 16x16/Makefile.am: updated

2003-09-18  Jakub Steiner <jimmac@ximian.com>

	* 16x16/mimetypes/gnome-mime-image-jpeg.png
	* 16x16/mimetypes/gnome-mime-image-png.png
	* 32x32/mimetypes/gnome-mime-image-jpeg.png
	* 32x32/mimetypes/gnome-mime-image-png.png: image filetypes (from
	  OOo)
	* 32x32/Makefile.am