@@ -1,0 +1,15 @@
+NULL=
+
+iconsize=32x32
+category=stock
+subtype=object
+icondir = $(datadir)/icons/gnome/$(iconsize)/$(category)/$(subtype)
+
+icon_DATA =\
+   stock_add-bookmark.png \
+   stock_bookmark.png \
+   stock_delete-bookmark.png \
+   stock_edit-bookmark.png \
+	$(NULL)
+
+EXTRA_DIST = $(icon_DATA)
