@@ -76,6 +76,7 @@ scalable/Makefile
 32x32/stock/io/Makefile        
 32x32/stock/media/Makefile        
 32x32/stock/net/Makefile        
+32x32/stock/object/Makefile
 36x36/apps/Makefile
 36x36/devices/Makefile        
 36x36/emblems/Makefile        
