@@ -1,5 +1,16 @@
 2003-09-23  Jakub Steiner <jimmac@ximian.com>
 
+	* 32x32/stock/object/stock_add-bookmark.png
+	* 32x32/stock/object/stock_bookmark.png
+	* 32x32/stock/object/stock_delete-bookmark.png
+	* 32x32/stock/object/stock_edit-bookmark.png
+	* configure.in
+	* 32x32/stock/object/Makefile.am
+	* 32x32/stock/Makefile.am: supposedly Epiphany needs it in 32x32
+	  as well
+	
+2003-09-23  Jakub Steiner <jimmac@ximian.com>
+
 	* TODO: add new stuff
 
 2003-09-23  Jakub Steiner <jimmac@ximian.com>
